--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "dependencies" : {
     "body-parser" : "1.15.2",
     "compression" : "1.6.0",
+    "connect-flash": "0.1.1",
     "ejs" : "2.5.2",
     "express" : "4.16.2",
     "express-session" : "1.14.1",
     "method-override" : "2.3.6",
-    "morgan" : "1.7.0"
+    "mongoose" : "4.6.5",
+    "morgan" : "1.7.0",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0"
   }
 }
