--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
   "name" : "MEAN",
   "version" : "0.0.3",
+  "scripts": {
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "app": "node server",
+    "start": "concurrently \"npm run tsc:w \" \"npm run app\" ",
+    "postinstall": "typings install"
+  },
   "dependencies" : {
+    "@angular/common": "2.1.1",
+    "@angular/compiler": "2.1.1",
+    "@angular/core": "2.1.1",
+    "@angular/forms": "2.1.1",
+    "@angular/http": "2.1.1",
+    "@angular/platform-browser": "2.1.1",
+    "@angular/platform-browser-dynamic": "2.1.1",
+    "@angular/router": "3.1.1",
+    "core-js": "2.4.1",
     "body-parser" : "1.15.2",
     "compression" : "1.6.0",
     "connect-flash": "0.1.1",
@@ -12,6 +28,16 @@
     "mongoose" : "4.6.5",
     "morgan" : "1.7.0",
     "passport": "0.3.2",
-    "passport-local": "1.0.0"
+    "passport-local": "1.0.0",
+    "reflect-metadata": "0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.39",
+    "zone.js": "0.6.26"
+  },
+  "devDependencies": {
+    "concurrently": "3.1.0",
+    "traceur": "0.0.111",
+    "typescript": "2.0.3",
+    "typings": "1.4.0"
   }
 }
