--- a/beestream/package.json
+++ b/beestream/package.json
@@ -5,17 +5,18 @@
     "app": "node server",
     "start": "concurrently \"npm run watch:build\" \"npm run watch:server\"",
     "watch:build": "webpack --watch",
-    "watch:server": "nodemon \"./server.js\" --watch \"./public/build\""
+    "watch:server": "nodemon \"./server.js\" --watch \"./public/build\"",
+    "build": "webpack"
   },
   "dependencies": {
-    "@angular/common": "5.2.4",
-    "@angular/compiler": "5.2.4",
-    "@angular/core": "5.2.4",
-    "@angular/forms": "5.2.4",
-    "@angular/http": "5.2.4",
-    "@angular/platform-browser": "5.2.4",
-    "@angular/platform-browser-dynamic": "5.2.4",
-    "@angular/router": "5.2.4",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/router": "^5.2.10",
     "body-parser": "1.18.2",
     "compression": "1.7.1",
     "connect-flash": "0.1.1",
@@ -36,19 +37,20 @@
   "devDependencies": {
     "@types/core-js": "0.9.35",
     "@types/jasmine": "^2.8.6",
-    "@types/node": "^9.6.0",
+    "@types/node": "^9.6.5",
     "@types/socket.io-client": "^1.4.32",
     "concurrently": "3.1.0",
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "nodemon": "1.17.2",
-    "socket.io": "^2.0.4",
+    "socket.io": "^2.1.0",
     "style-loader": "^0.20.3",
     "traceur": "0.0.111",
-    "ts-loader": "^4.1.0",
+    "ts-loader": "^4.2.0",
     "typescript": "^2.8.1",
-    "webpack": "^4.3.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   }
 }
