--- a/beestream/package.json
+++ b/beestream/package.json
@@ -2,6 +2,7 @@
   "name": "Beestream",
   "version": "0.0.1",
   "scripts": {
+    "postinstall": "./postinstall.sh",
     "app": "node server",
     "start": "concurrently \"npm run watch:build\" \"npm run watch:server\"",
     "watch:build": "webpack --watch",
@@ -32,6 +33,8 @@
     "morgan": "1.9.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "5.5.6",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "2.1.0",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
@@ -43,7 +46,6 @@
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "nodemon": "1.17.2",
-    "socket.io": "^2.1.0",
     "style-loader": "^0.20.3",
     "traceur": "0.0.111",
     "ts-loader": "^4.2.0",
