--- a/beestream/package.json
+++ b/beestream/package.json
@@ -2,12 +2,12 @@
   "name": "Beestream",
   "version": "0.0.1",
   "scripts": {
-    "postinstall": "./postinstall.sh",
     "app": "node server",
     "start": "concurrently \"npm run watch:build\" \"npm run watch:server\"",
     "watch:build": "webpack --watch",
     "watch:server": "nodemon \"./server.js\" --watch \"./public/build\"",
-    "build": "webpack"
+    "build": "webpack",
+    "pbuild": "webpack -p"
   },
   "dependencies": {
     "@angular/common": "^5.2.10",
@@ -34,7 +34,7 @@
     "reflect-metadata": "0.1.12",
     "rxjs": "5.5.6",
     "socket.io": "^2.1.0",
-    "socket.io-client": "2.1.0",
+    "socket.io-client": "^2.1.0",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
