--- a/beestream/package.json
+++ b/beestream/package.json
@@ -10,18 +10,25 @@
     "pbuild": "webpack -p"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.10",
-    "@angular/cdk": "^5.2.5",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/material": "^5.2.5",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
+    "@angular/animations": "^6.0.0",
+    "@angular/cdk": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/material": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@fortawesome/angular-fontawesome": "^0.1.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.2",
+    "@fortawesome/free-brands-svg-icons": "^5.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@ngx-share/core": "^6.0.1",
+    "@swimlane/ngx-charts": "^9.0.0",
     "body-parser": "1.18.2",
+    "chart.js": "^2.7.2",
     "compression": "1.7.1",
     "connect-flash": "0.1.1",
     "connect-mongo": "2.0.1",
@@ -34,28 +41,29 @@
     "method-override": "2.3.10",
     "mongoose": "4.6.5",
     "morgan": "1.9.0",
+    "ng2-charts": "^1.6.0",
     "reflect-metadata": "0.1.12",
-    "rxjs": "5.5.6",
-    "socket.io": "^2.1.0",
-    "socket.io-client": "^2.1.0",
-    "zone.js": "0.8.20"
+    "rxjs": "^6.0.0",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@types/core-js": "0.9.35",
-    "@types/jasmine": "^2.8.6",
-    "@types/node": "^9.6.5",
+    "@types/jasmine": "^2.8.8",
+    "@types/node": "^9.6.23",
     "@types/socket.io-client": "^1.4.32",
     "concurrently": "3.1.0",
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
-    "nodemon": "1.17.2",
+    "nodemon": "^1.18.3",
     "style-loader": "^0.20.3",
     "traceur": "0.0.111",
-    "ts-loader": "^4.2.0",
-    "typescript": "^2.8.1",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.1",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.4"
   }
 }
