--- a/beestream/package.json
+++ b/beestream/package.json
@@ -39,7 +39,7 @@
     "express-session": "1.15.6",
     "ls": "^0.2.1",
     "method-override": "2.3.10",
-    "mongoose": "4.6.5",
+    "mongoose": "^5.2.0",
     "morgan": "1.9.0",
     "ng2-charts": "^1.6.0",
     "reflect-metadata": "0.1.12",
