Build automation fixed!

--- a/beestream/package.json
+++ b/beestream/package.json
@@ -5,7 +5,7 @@
     "app": "node server",
     "start": "concurrently \"npm run watch:build\" \"npm run watch:server\"",
     "watch:build": "webpack --watch",
-    "watch:server": "nodemon \"./server.js\" --watch \"./public/build\"",
+    "watch:server": "nodemon \"./server.js\" --watch \"./app ./public/build ./config\"",
     "build": "webpack",
     "pbuild": "webpack -p"
   },
@@ -26,19 +26,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@ngx-share/core": "^6.0.1",
-    "@swimlane/ngx-charts": "^9.0.0",
     "body-parser": "1.18.2",
     "chart.js": "^2.7.2",
     "compression": "1.7.1",
-    "connect-flash": "0.1.1",
-    "connect-mongo": "2.0.1",
     "cookie-parser": "1.4.3",
     "core-js": "2.5.3",
     "ejs": "2.5.7",
     "express": "4.16.2",
-    "express-session": "1.15.6",
-    "ls": "^0.2.1",
-    "method-override": "2.3.10",
     "mongoose": "^5.2.0",
     "morgan": "1.9.0",
     "ng2-charts": "^1.6.0",
@@ -46,6 +40,7 @@
     "rxjs": "^6.0.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
+    "style-loader": "^0.23.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -57,7 +52,6 @@
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "nodemon": "^1.18.3",
-    "style-loader": "^0.20.3",
     "traceur": "0.0.111",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
