--- a/beestream/package.json
+++ b/beestream/package.json
@@ -29,18 +29,16 @@
     "body-parser": "1.18.2",
     "chart.js": "^2.7.2",
     "compression": "1.7.1",
-    "cookie-parser": "1.4.3",
+    "cookie-parser": "^1.4.3",
     "core-js": "2.5.3",
     "ejs": "2.5.7",
     "express": "4.16.2",
     "mongoose": "^5.2.0",
     "morgan": "1.9.0",
     "ng2-charts": "^1.6.0",
-    "reflect-metadata": "0.1.12",
     "rxjs": "^6.0.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
-    "style-loader": "^0.23.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -52,6 +50,7 @@
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "nodemon": "^1.18.3",
+    "style-loader": "^0.23.0",
     "traceur": "0.0.111",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
