progress towards data filtering

--- a/beestream/package.json
+++ b/beestream/package.json
@@ -26,7 +26,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@ngx-share/core": "^6.0.1",
+    "@types/c3": "^0.6.2",
     "body-parser": "1.18.2",
+    "c3": "^0.6.7",
     "chart.js": "^2.7.2",
     "compression": "1.7.1",
     "cookie-parser": "^1.4.3",
