Updated Dashboard with loading animations

--- a/beestream/package.json
+++ b/beestream/package.json
@@ -10,55 +10,55 @@
     "pbuild": "webpack -p"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.0",
+    "@angular/animations": "^6.1.10",
     "@angular/cdk": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
     "@angular/material": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@fortawesome/angular-fontawesome": "^0.1.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.2",
-    "@fortawesome/free-brands-svg-icons": "^5.2.0",
-    "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@ngx-share/core": "^6.0.1",
     "@types/c3": "^0.6.2",
     "body-parser": "1.18.2",
-    "c3": "^0.6.7",
-    "chart.js": "^2.7.2",
+    "c3": "^0.6.8",
+    "chart.js": "^2.7.3",
     "compression": "1.7.1",
     "cookie-parser": "^1.4.3",
     "core-js": "2.5.3",
     "ejs": "2.5.7",
     "express": "4.16.2",
-    "mongoose": "^5.3.7",
-    "morgan": "1.9.0",
+    "mongoose": "^5.3.12",
+    "morgan": "^1.9.1",
     "ng2-charts": "^1.6.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.3.3",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@types/core-js": "0.9.35",
-    "@types/jasmine": "^2.8.8",
-    "@types/node": "^9.6.23",
+    "@types/jasmine": "^2.8.11",
+    "@types/node": "^9.6.37",
     "@types/socket.io-client": "^1.4.32",
     "concurrently": "3.1.0",
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
-    "nodemon": "^1.18.3",
-    "style-loader": "^0.23.0",
+    "nodemon": "^1.18.6",
+    "style-loader": "^0.23.1",
     "traceur": "0.0.111",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
     "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
