--- a/beestream/package.json
+++ b/beestream/package.json
@@ -10,56 +10,56 @@
     "pbuild": "webpack -p"
   },
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^6.0.0",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/material": "^6.0.0",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
-    "@fortawesome/angular-fontawesome": "^0.1.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-brands-svg-icons": "^5.5.0",
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
-    "@ngx-share/core": "^6.0.1",
+    "@angular/animations": "^7.0.0",
+    "@angular/cdk": "^7.0.0",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/forms": "^7.0.0",
+    "@angular/http": "^7.0.0",
+    "@angular/material": "^7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@angular/router": "^7.0.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@ngx-share/core": "^7.1.1",
     "@types/c3": "^0.6.2",
-    "body-parser": "1.18.2",
-    "c3": "^0.6.8",
+    "body-parser": "1.18.3",
+    "c3": "^0.6.12",
     "chart.js": "^2.7.3",
-    "compression": "1.7.1",
+    "compression": "1.7.3",
     "cookie-parser": "^1.4.3",
-    "core-js": "2.5.3",
+    "core-js": "^2.6.0",
     "d3": "^5.7.0",
-    "ejs": "2.5.7",
-    "express": "4.16.2",
-    "mongoose": "^5.3.12",
+    "ejs": "^2.6.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
     "ng2-charts": "^1.6.0",
     "rxjs": "^6.3.3",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@types/core-js": "0.9.35",
-    "@types/jasmine": "^2.8.11",
-    "@types/node": "^9.6.37",
+    "@types/core-js": "^2.0.0",
+    "@types/jasmine": "^3.3.5",
+    "@types/node": "^10.0.0",
     "@types/socket.io-client": "^1.4.32",
-    "concurrently": "3.1.0",
-    "css-loader": "^0.28.11",
+    "concurrently": "4.1.0",
+    "css-loader": "^2.1.0",
     "html-loader": "^0.5.5",
-    "nodemon": "^1.18.6",
+    "nodemon": "^1.18.9",
     "style-loader": "^0.23.1",
     "traceur": "0.0.111",
-    "ts-loader": "^4.4.2",
-    "typescript": "^2.9.2",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.2",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
