--- a/beestream/package.json
+++ b/beestream/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@ngx-share/core": "^7.1.1",
     "@types/c3": "^0.6.2",
+    "async-es": "^2.6.1",
     "body-parser": "1.18.3",
     "c3": "^0.6.12",
     "chart.js": "^2.7.3",
