--- a/beestream/package.json
+++ b/beestream/package.json
@@ -10,21 +10,22 @@
     "pbuild": "webpack -p"
   },
   "dependencies": {
-    "@angular/animations": "^7.0.0",
-    "@angular/cdk": "^7.0.0",
-    "@angular/common": "^7.0.0",
-    "@angular/compiler": "^7.0.0",
-    "@angular/core": "^7.0.0",
-    "@angular/forms": "^7.0.0",
-    "@angular/http": "^7.0.0",
-    "@angular/material": "^7.0.0",
-    "@angular/platform-browser": "^7.0.0",
-    "@angular/platform-browser-dynamic": "^7.0.0",
-    "@angular/router": "^7.0.0",
+    "@angular/animations": "^7.2.7",
+    "@angular/cdk": "^7.2.7",
+    "@angular/common": "^7.2.7",
+    "@angular/compiler": "^7.2.7",
+    "@angular/core": "^7.2.7",
+    "@angular/forms": "^7.2.7",
+    "@angular/http": "^7.2.7",
+    "@angular/material": "^7.2.7",
+    "@angular/platform-browser": "^7.2.7",
+    "@angular/platform-browser-dynamic": "^7.2.7",
+    "@angular/router": "^7.2.7",
     "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-brands-svg-icons": "^5.6.3",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@ngx-share/core": "^7.1.1",
     "@types/c3": "^0.6.2",
     "angular2-template-loader": "^0.6.2",
@@ -38,17 +39,19 @@
     "d3": "^5.7.0",
     "ejs": "^2.6.0",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
     "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
     "rxjs": "^6.3.3",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "weather-icons": "^1.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@types/core-js": "^2.0.0",
     "@types/jasmine": "^3.3.5",
-    "@types/node": "^10.0.0",
+    "@types/node": "^11.9.5",
     "@types/socket.io-client": "^1.4.32",
     "concurrently": "4.1.0",
     "css-loader": "^2.1.0",
